Trabalhando com either e notification pattern no caso de uso de criação de categoria

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.7.0'
+    implementation "io.vavr:vavr:0.10.4"
 }
 
 test {
