--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     }
     implementation('org.springframework.boot:spring-boot-starter-undertow')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+
     testImplementation('org.springframework.boot:spring-boot-starter-test')
+
+    implementation('com.h2database:h2')
 }
 
 test {
