--- a/infrastructure/src/main/resources/application-production.yml
+++ b/infrastructure/src/main/resources/application-production.yml
@@ -4,9 +4,8 @@ mysql:
   schema: adm_videos
   url: ${DATABASE_MYSQL_URL:localhost:3306}
 
-server:
-  port: 8080
-  undertow:
-    threads:
-      worker: 64
-      io: 4
+spring:
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: none
