--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
     implementation('com.h2database:h2')
+
+    implementation "io.vavr:vavr:0.10.4"
 }
 
 flyway {
