--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     testImplementation('org.flywaydb:flyway-core')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
+    testImplementation('org.testcontainers:testcontainers:1.17.2')
+    testImplementation('org.testcontainers:mysql:1.17.2')
+    testImplementation('org.testcontainers:junit-jupiter:1.17.2')
+
     implementation('com.h2database:h2')
 
     implementation "io.vavr:vavr:0.10.4"
