--- a/application/build.gradle
+++ b/application/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.7.0'
     implementation "io.vavr:vavr:0.10.4"
